test/good/generics/func07.px

func call<A,B>(x: A, f: A->B) def
    print f(x)

func f<T>(x: T): T def
    return x + x

call(1, f)
call(44, f)
call("abc", f)
